Thu Jul 11 10:47:41 2002  Steve Huston  <shuston@riverace.com>

        * performance-tests/Cubit/TAO/MT_Cubit/Task_Client.cpp (svc):
          In calls the ACE_Thread_Manager::exit() and ACE_OS::thr_exit(),
          correct argument to be ACE_THR_FUNC_RETURN, not a pointer.
          Thanks to Johnny Willemsen for pointing this out.

Thu Jul 11 09:23:12 2002   Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/RTCORBA/Profile_And_Endpoint_Selection/client.bor:
        * tests/RTCORBA/Profile_And_Endpoint_Selection/server.bor:
          Added missing TAO_Strategies library to fix BCB compile errors.

Wed Jul 10 17:54:14 2002   Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/Utils/Servant_Var.cpp:
	* tao/Utils/RIR_Narrow.h:
	* tao/Utils/PolicyList_Destroyer.h: Fixed fuzz errors.

Wed Jul 10 15:38:48 2002  Mayur Deshpande  <mayur@ics.uci.edu>

	* examples/AMH/Sink_Server/AMH_Servant.h:
	* examples/AMH/Sink_Server/AMH_Servant.cpp:
	* examples/AMH/Sink_Server/Base_Server.cpp:
	* examples/AMH/Sink_Server/client.cpp:

	* examples/AMH/Sink_Server/client.cpp:
	* examples/AMH/Sink_Server/server.cpp:

	  Changed deprecated TAO_ENV_ exception macros to ACE_ENV_
	  exception macros.

Wed Jul 10 14:25:14 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tao/ccm_core/Component_Base.idl:
	* tao/ccm_core/CosPersistentState.idl: Moved these files under the
	  new CIAO subdir.

Wed Jul 10 11:35:05 2002  Mayur Deshpande  <mayur@ics.uci.edu>

	* tests/AMH_Exceptions/server.cpp (ST_AMH_Server):

	  Removed the changes of:
	  Mon Jul 8 11:05:44 2002 Mayur Deshpande <mayur@ics.uci.edu>
	  and instead did a simple ACE_const_cast instead.

	* examples/AMH/Sink_Server/AMH_Servant.cpp:
	* examples/AMH/Sink_Server/Base_Server.cpp:
	* examples/AMH/Sink_Server/Base_Server.h:
	* examples/AMH/Sink_Server/client.cpp:
	* examples/AMH/Sink_Server/mt_server.cpp:
	* examples/AMH/Sink_Server/st_server.cpp:

	  Used ACE_const_cast to convert string literals to 'char